Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-24369

Imports are order dependent

XMLWordPrintable

      Currently QtQuick 2.0 needs to be imported first, before any submodules. It is disputable whether QtQuick 2.0 should even be needed at all if you aren't using elements from that specific import, but in a declarative language the order of imports shouldn't matter for clearly defined behaviour.

      This gives a module not installed error:
      import QtQuick.Particles 2.0
      import QtQuick 2.0

      This works:
      import QtQuick 2.0
      import QtQuick.Particles 2.0

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            mvogt Matthew Vogt (closed Nokia identity) (Inactive)
            aalpert-nokia Alan Alpert (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes