tests/auto/qml/qqmlmoduleplugin/data/importsNested.2.qml
@@ -1,0 +1,5 @@
+import com.nokia.AutoTestQmlNestedPluginType 1.0
+import com.nokia.AutoTestQmlNestedPluginType.Nested 1.0
+
+MyNestedPluginType {
+}
