tests/auto/qml/qqmlmoduleplugin/data/importsNested.3.qml
@@ -1,0 +1,4 @@
+import com.nokia.AutoTestQmlNestedPluginType 1.0
+
+MyNestedPluginType {
+}
