tests/auto/qml/qqmlmoduleplugin/nestedPlugin/nestedPlugin.pro
@@ -1,0 +1,7 @@
+TEMPLATE = lib
+CONFIG += nestedPlugin
+SOURCES = nestedPlugin.cpp
+QT = core qml
+DESTDIR = ../imports/com/nokia/AutoTestQmlNestedPluginType
+
+QT += core-private gui-private qml-private
